--- a/src/app/components/basic-components/modal/modal.component.scss
+++ b/src/app/components/basic-components/modal/modal.component.scss
@@ -17,13 +17,19 @@
 .modal-wrapper {
   align-items: center;
   flex-direction: column;
-  width: 500px;
+  width: 800px;
+  max-width: 90vw;
   background: $color-white 0 0 no-repeat padding-box;
   border-radius: 6px;
   display: flex;
   padding-bottom: 15px;
-  max-height: 80vh;
+  max-height: 90vh;
   overflow-y: auto;
+
+  @media screen and (max-width: 820px) {
+    width: 95%;
+    margin: 15px;
+  }
 
   @media screen and (max-width: 520px) {
     width: 90%;
