--- a/src/app/pages/admin/about/about.component.html
+++ b/src/app/pages/admin/about/about.component.html
@@ -38,11 +38,11 @@
               </div>
 
               <div class="form-group">
-                <basic-textarea
+                <basic-html-editor
                   label="Page Content"
-                  placeholder="Main content for the about page"
                   [(value)]="content"
-                ></basic-textarea>
+                  [showPreview]="true"
+                ></basic-html-editor>
               </div>
 
               <div class="form-group">
