--- a/src/app/pages/admin/experiences/experiences.component.scss
+++ b/src/app/pages/admin/experiences/experiences.component.scss
@@ -109,7 +109,7 @@
           font-size: 0.875rem;
           color: #64748b;
           line-height: 1.5;
-          margin: 8px 0 0 0;
+          margin: 8px 0 0 16px;
         }
 
         .position-skills {
