--- a/src/app/pages/admin/articles/edit/edit-article.component.html
+++ b/src/app/pages/admin/articles/edit/edit-article.component.html
@@ -159,6 +159,7 @@
               <basic-html-editor
                 label="Article Content"
                 [(value)]="content"
+                (processedContentForSave)="processedContent = $event"
                 [showPreview]="true"
               />
             </div>
