--- a/src/app/pages/admin/projects/edit/edit-project.component.html
+++ b/src/app/pages/admin/projects/edit/edit-project.component.html
@@ -149,6 +149,7 @@
                 label="Project Content"
                 [value]="content"
                 (valueChange)="content = $event"
+                (processedContentForSave)="processedContent = $event"
                 [showPreview]="true"
               />
             </div>
