edit article page html editor minor fix

--- a/src/app/pages/admin/articles/edit/edit-article.component.html
+++ b/src/app/pages/admin/articles/edit/edit-article.component.html
@@ -158,7 +158,8 @@
             <div class="form-group full-width">
               <basic-html-editor
                 label="Article Content"
-                [(value)]="content"
+                [value]="content"
+                (valueChange)="content = $event"
                 (processedContentForSave)="processedContent = $event"
                 [showPreview]="true"
               />
