create project page

--- a/src/app/pages/admin/projects/projects.component.html
+++ b/src/app/pages/admin/projects/projects.component.html
@@ -13,6 +13,7 @@
             label="Create New Project"
             [fillButton]="true"
             [onWhite]="false"
+            (buttonClick)="createNewProject()"
           />
         </div>
 
@@ -159,6 +160,7 @@
               <basic-button
                 label="Create First Project"
                 [fillButton]="true"
+                (buttonClick)="createNewProject()"
               />
             </div>
           </div>
